--- a/saturday-api/src/main/resources/base/application.properties
+++ b/saturday-api/src/main/resources/base/application.properties
@@ -1,6 +1,6 @@
 server.port=7777
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://172.93.43.74:3306/db_example?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://172.93.43.74:3306/db_example?useSSL=false&useUnicode=true&characterEncoding=UTF-8&connectTimeout=6000&socketTimeout=60000&serverTimezone=Asia/Shanghai
 spring.datasource.username=alice
 spring.datasource.password=Alice2019;
